--- a/index.html
+++ b/index.html
@@ -920,8 +920,8 @@
             
             if (!searchTerm) return;
             
-            // 使用Google进行全网搜索，在新标签页打开
-            window.open(`https://www.google.com/search?q=${encodeURIComponent(searchTerm)}`, '_blank');
+            // 使用Bing进行全网搜索，在新标签页打开
+            window.open(`https://www.bing.com/search?q=${encodeURIComponent(searchTerm)}`, '_blank');
         }
 
         searchButton.addEventListener('click', performSearch);
